--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,13 +4,35 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
-    background: #fafafa;
+    background: var(--main-bg-color);
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     font-size: 10px;
-    color: #444;
+    color: var(--main-text-color);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    --main-bg-color: #fff;
+    --main-text-color: #323232;
+    --accent-dark-bg-color: #320374;
+    --accent-dark-text-color: #fff;
+    --accent-light-bg-color: #873eff;
+    --accent-light-text-color: #fff;
+    --menu-title-bg-color: #d8d8d8;
+    --menu-title-text-color: #323232;
+    --menu-bg-color: #fff;
+    --menu-text-color: #323232;
+    --separator-bg-color: #e6e6e6;
+    --separator-text-color: #6a6a6a;
+    --toast-bg-color: #323232;
+    --toast-text-color: #fff;
+    --button-bg-color: #ccc;
+    --button-text-color: #323232;
+    --software-key-bg-color: #ccc;
+    --software-key-text-color: #323232;
+    --input-border-color: #aaa;
 }
 
 * {
@@ -19,16 +41,6 @@ body {
 
 #app {
     height: 100%;
-}
-
-button {
-    color: blue;
-}
-button:focus {
-    color: green;
-}
-button:active {
-    color: red;
 }
 
 h1,
