--- a/src/ui-components/Header.module.css
+++ b/src/ui-components/Header.module.css
@@ -1,10 +1,11 @@
 .root {
-  height: 28px;
   background-color: var(--header-bg-color);
   color: var(--header-text-color);
-  text-align: center;
-  /* overflow: hidden; */
+  text-align: left;
+  overflow: hidden;
   text-overflow: ellipsis;
-  padding: 0 10px;
-  font-size: 17px;
+  padding: 0 5px 1px 5px;
+  white-space: nowrap;
+  font-size: 12px;
+  font-weight: bold;
 }
