--- a/src/ui-components/MenuBar.module.css
+++ b/src/ui-components/MenuBar.module.css
@@ -2,11 +2,11 @@
   display: flex;
   align-items: center;
   width: 100vw;
-  padding: 2px 5px;
+  padding: 1px 5px;
   background-color: var(--menubar-bg-color);
   color: var(--menubar-text-color);
-  font-weight: 600;
-  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .root > div {
@@ -18,6 +18,7 @@
 }
 .root > .center {
   text-align: center;
+  text-transform: uppercase;
 }
 .root > .right {
   text-align: right;
