--- a/src/ui-components/View.module.css
+++ b/src/ui-components/View.module.css
@@ -1,12 +1,19 @@
 .root {
-  /* border: 1px solid red; */
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .content {
-  flex: 1;
-  overflow-y: auto;
   overflow-x: hidden;
+  padding: 18px 0;
+}
+
+.menubar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
