--- a/src/ui-components/Menu.module.css
+++ b/src/ui-components/Menu.module.css
@@ -39,5 +39,5 @@
   color: var(--app-accent-color);
 }
 .option.selected > .shortcut {
-  color: var(--accent-light-text-color);
+  color: var(--highlight-text-color);
 }
