--- a/src/ui-components/Header.module.css
+++ b/src/ui-components/Header.module.css
@@ -7,7 +7,13 @@
   text-overflow: ellipsis;
   padding: 0 5px 1px 5px;
   white-space: nowrap;
+  width: 100%;
+  height: 28px;
+  display: flex;
+  align-items: center;
+}
+body[data-compact-layout] .root {
+  height: unset;
   font-size: 12px;
   font-weight: bold;
-  width: 100%;
 }
