--- a/src/routes/Podcasts.module.css
+++ b/src/routes/Podcasts.module.css
@@ -1,9 +1,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
-  grid-auto-rows: 1fr;
-  grid-gap: 3px;
-  padding: 3px 0;
+  grid-auto-rows: 80px;
+  grid-gap: 2px;
 }
 
 .tile:hover,
