--- a/src/routes/AppSettings.module.css
+++ b/src/routes/AppSettings.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   padding: 12px 5px;
 }
-.row.selected {
+[data-selected].row {
   background-color: var(--highlight-bg-color);
   color: var(--highlight-text-color);
 }
