--- a/src/ui-components/GridItem.module.css
+++ b/src/ui-components/GridItem.module.css
@@ -1,9 +1,9 @@
 .root {
   width: 100%;
 }
-.root.selected {
-  filter: brightness(1);
-}
 .root.dim {
   filter: brightness(0.5);
+}
+[data-selected].root {
+  filter: brightness(1);
 }
