--- a/src/ui-components/Menu.module.css
+++ b/src/ui-components/Menu.module.css
@@ -10,6 +10,15 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.title {
+  background-color: var(--header-bg-color);
+  color: var(--header-text-color);
+  padding: 0 5px 3px 5px;
+  font-size: 12px;
+  font-weight: bold;
+  border-bottom: 1px solid var(--divider-color);
+}
+
 .content {
   background-color: var(--menu-bg-color);
   color: var(--menu-text-color);
@@ -24,7 +33,7 @@
   display: flex;
   align-items: center;
 }
-.option.selected {
+[data-selected].option {
   background-color: var(--highlight-bg-color);
   color: var(--highlight-text-color);
 }
@@ -44,6 +53,6 @@ body[data-compact-layout] .option {
   margin-right: 5px;
   color: var(--app-accent-color);
 }
-.option.selected > .shortcut {
+[data-selected] > .shortcut {
   color: var(--highlight-text-color);
 }
