--- a/src/routes/AppSettings.module.css
+++ b/src/routes/AppSettings.module.css
@@ -12,3 +12,19 @@
 body[data-compact-layout] .row {
   padding: 9px 5px;
 }
+
+.heading {
+  font-weight: bold;
+  font-size: 12px;
+  padding: 10px 5px 3px 5px;
+  border-bottom: 1px solid var(--divider-color);
+}
+
+.selectValue {
+  color: var(--accent-text-color);
+  text-transform: capitalize;
+}
+[data-selected] .selectValue {
+  background-color: var(--highlight-bg-color);
+  color: var(--highlight-text-color);
+}
