--- a/src/style/index.css
+++ b/src/style/index.css
@@ -54,3 +54,9 @@ h5 {
   margin: 0.5rem 0;
   padding: 0;
 }
+
+input {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--accent-text-color);
+}
