--- a/src/components/MiniPlayer.module.css
+++ b/src/components/MiniPlayer.module.css
@@ -1,8 +1,11 @@
 .root {
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.times {
-  display: flex;
-  justify-content: space-between;
+.progressbar {
+  flex: 1;
+  margin: 0 10px;
 }
