--- a/src/ui-components/View.module.css
+++ b/src/ui-components/View.module.css
@@ -30,3 +30,9 @@ body[data-compact-layout] .root.noHeader {
   bottom: 0;
   left: 0;
 }
+
+@media only screen and (min-width: 241px) {
+  .root {
+    background-size: 100vw;
+  }
+}
