--- a/src/routes/Player.module.css
+++ b/src/routes/Player.module.css
@@ -10,26 +10,19 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.85) 30%,
-    50%,
-    rgba(0, 0, 0, 0)
-  );
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.85), 50%, rgba(0, 0, 0, 0));
 }
 
 .info {
   color: #fff;
-  padding: 5px;
+  padding: 0 5px 5px 5px;
+  background-color: rgba(0, 0, 0, 0.85);
 }
 .author {
   font-size: 12px;
 }
 .title {
   font-size: 17px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 
 .times {
@@ -82,7 +75,7 @@
   .gradient {
     background: linear-gradient(
       0deg,
-      rgba(0, 0, 0, 0.85) 35%,
+      rgba(0, 0, 0, 0.85),
       50%,
       rgba(0, 0, 0, 0)
     );
