--- a/src/ui-components/Toast.module.css
+++ b/src/ui-components/Toast.module.css
@@ -1,6 +1,6 @@
 .root {
   position: fixed;
-  top: 100%;
+  top: calc(100% + 10px);
   left: 0;
   background: var(--menubar-bg-color);
   color: var(--menubar-text-color);
@@ -12,5 +12,5 @@
   box-shadow: 0px -3px 10px rgb(0 0 0 / 50%);
 }
 .root.show {
-  transform: translateY(-100%);
+  transform: translateY(calc(-100% - 10px));
 }
