--- a/src/components/AppMenu.module.css
+++ b/src/components/AppMenu.module.css
@@ -44,3 +44,20 @@
   padding-bottom: 100%;
   background-size: contain;
 }
+
+.row {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
+.row[data-selected] {
+  background-color: var(--highlight-bg-color);
+  color: var(--highlight-text-color);
+}
+.row > span {
+  color: var(--accent-text-color);
+}
+.row > img {
+  margin: 0 5px;
+}
