--- a/src/routes/Search.module.css
+++ b/src/routes/Search.module.css
@@ -1,13 +1,7 @@
 .searchBox {
-  width: calc(100% - 10px);
   padding: 5px;
-  margin: 0 5px;
-  border: none;
-  outline: none;
-  border-bottom: 2px solid var(--divider-color);
-  margin-bottom: 5px;
   font-size: 17px;
 }
-[data-selected].searchBox {
-  border-bottom: 2px solid var(--app-accent-color);
+.searchBox > input {
+  font-size: 1.6rem;
 }
