--- a/src/ui-components/SvgIcon.module.css
+++ b/src/ui-components/SvgIcon.module.css
@@ -1,14 +1,3 @@
-.small {
-  height: 18px;
-  width: 18px;
-}
-
-.medium {
-  height: 24px;
-  width: 24px;
-}
-
-.large {
-  height: 36px;
-  width: 36px;
+.root {
+  fill: var(--primary-text-color);
 }
